--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,11 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  build_runner: ^2.4.13
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
