--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
+  dio: ^5.7.0
   flutter:
     sdk: flutter
+  retrofit: ^4.4.1
 
 dev_dependencies:
   build_runner: ^2.4.13
@@ -16,6 +18,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^6.8.0
+  retrofit_generator: ^9.1.4
 
 flutter:
   uses-material-design: true
