--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.0.0+3
+  path: ^1.8.2
+
 
 dev_dependencies:
   flutter_lints: ^4.0.0
