--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,13 @@ dependencies:
   dio: ^5.7.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
+  font_awesome_flutter: ^10.8.0
   json_annotation: ^4.9.0
+  path: ^1.9.0
   retrofit: ^4.4.1
-  sqflite: ^2.4.0
+  sqflite: ^2.4.1
+  toastification: ^2.3.0
 
 dev_dependencies:
   build_runner: ^2.4.13
