--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   font_awesome_flutter: ^10.8.0
   json_annotation: ^4.9.0
+  logger: ^2.4.0
   path: ^1.9.0
   retrofit: ^4.4.1
   sqflite: ^2.4.1
