--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   retrofit: ^4.4.1
   sqflite: ^2.4.1
   toastification: ^2.3.0
+  bloc: ^8.1.2
+  meta: ^1.9.1
 
 dev_dependencies:
   build_runner: ^2.4.13
